first commit from Baoyan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="edu.northeastern.cs5520_group9">
+    package="edu.northeastern.cs5520_group9" >
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -14,10 +16,17 @@
         android:theme="@style/Theme.CS5520_Group9"
         tools:targetApi="31" >
         <activity
+            android:name=".webService.UserProfile"
+            android:exported="false" />
+        <activity
+            android:name=".webService.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".menu.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
