--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="edu.northeastern.cs5520_group9" >
+    package="edu.northeastern.cs5520_group9">
 
-    <uses-permission android:name="android.permission.INTERNET" />                     <!-- Permission for internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,10 +14,19 @@
         android:roundIcon="@mipmap/ic_launcher_group_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CS5520_Group9"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".firebase.HistoryActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".firebase.SendStickerActivity"
+            android:exported="false"
+
+            android:theme="@style/Theme.CS5520_Group9.NoActionBar" />
         <activity
             android:name=".menu.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
