--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 android {
     compileSdk 32
@@ -33,6 +34,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.2'
     implementation 'com.google.firebase:firebase-messaging:23.1.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
