send sticker and update db
* also update login logic
* the current username is stored in SharedPreference for cross activity access

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".team.TeamNameActivity" />
-        <activity android:name=".firebase.FirebaseDBActivity" />
+        <activity android:name=".firebase.LoginActivity" />
         <activity android:name=".groupProject.GroupProjectActivity" />
         <activity android:name=".webService.SearchActivity" />
         <activity android:name=".webService.getImageActivity" />
