--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS5520_Group9"
         tools:targetApi="31">
+
         <activity
             android:name=".firebase.HistoryActivity"
             android:exported="false" />
+
+        <receiver
+            android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".firebase.SendStickerActivity"
