--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS5520_Group9"
         tools:targetApi="31">
-
+        <activity
+            android:name=".groupProject.Login_for_game"
+            android:exported="false" />
+        <activity
+            android:name=".groupProject.game_setting"
+            android:exported="false" />
+        <activity
+            android:name=".groupProject.Register_for_game"
+            android:exported="false" />
         <activity
             android:name=".firebase.HistoryActivity"
             android:exported="false" />
@@ -23,7 +31,7 @@
         <receiver
             android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
@@ -32,7 +40,6 @@
         <activity
             android:name=".firebase.SendStickerActivity"
             android:exported="false"
-
             android:theme="@style/Theme.CS5520_Group9.NoActionBar" />
         <activity
             android:name=".menu.MainActivity"
