Final Project: add game design, game activity, game setting and relevant layout file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".groupProject.Login_for_game"
             android:exported="false" />
         <activity
-            android:name=".groupProject.game_setting"
+            android:name=".groupProject.GameSetting"
             android:exported="false" />
         <activity
             android:name=".groupProject.Register_for_game"
