--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:theme="@style/Theme.CS5520_Group9"
         tools:targetApi="31">
         <activity
+            android:name=".groupProject.GamePlayActivity"
+            android:configChanges="screenSize"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".groupProject.MatchingActivity"
             android:exported="false" />
         <activity
@@ -24,7 +28,9 @@
             android:exported="false" />
         <activity
             android:name=".groupProject.GameSetting"
-            android:exported="false" />
+            android:configChanges="screenSize"
+            android:screenOrientation="landscape" />
+        android:exported="false" />
         <activity
             android:name=".groupProject.LocationActivity"
             android:exported="false" />
