--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".groupProject.GroupProjectActivity" />
         <activity android:name=".webService.SearchActivity" />
         <activity android:name=".webService.getImageActivity" />
+        <activity android:name=".groupProject.ScoreboardActivity" />
     </application>
 
 </manifest>
