Final Project:fixed "png: AAPT: error: file failed to compile."

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    aaptOptions {
+        cruncherEnabled = false
+    }
 }
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
